--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     }
   ],
   "require": {
-    "php": "^8.2",
-    "laravel/framework": "^11.0",
-    "illuminate/console": "^11.0",
-    "illuminate/support": "^11.0"
+    "php": "^8.2|^8.3|^8.4",
+    "laravel/framework": "^11.0|^12.0",
+    "illuminate/console": "^11.0|^12.0",
+    "illuminate/support": "^11.0|^12.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.0",
